Tests/CompilerTests/negative/missing-implementation.expected
negative/missing-implementation.hylo:14.1-6: error: no implementation of 'f3'
given Void: P {
~~~~~
